Updated JDK version, addressed some of the warnings in the code